--- a/src/components/MultiTab/index.less
+++ b/src/components/MultiTab/index.less
@@ -1,3 +1,4 @@
+@import '~ant-design-vue/lib/style/themes/default.less';
 @import '../index';
 
 @multi-tab-prefix-cls: ~"@{ant-pro-prefix}-multi-tab";
@@ -22,4 +23,18 @@
 .topmenu.content-width-Fluid .@{multi-tab-wrapper-prefix-cls} {
   max-width: 100%;
   margin: 0 auto;
+}
+
+.ant-tabs.ant-tabs-card {
+  .ant-tabs-card-bar {
+    .ant-tabs-tab {
+      border: 0;
+      border-radius: 0;
+      &.ant-tabs-tab-active {
+        background-color: #f0f2f5;
+      }
+    }
+
+
+  }
 }
