--- a/src/global.less
+++ b/src/global.less
@@ -86,52 +86,6 @@ ol {
   }
 }
 
-.card-table {
-  .ant-card-body {
-    padding: 0;
-  }
-
-  .table-list-toolbar {
-    overflow-x: auto;
-    overflow-y: hidden;
-
-    .table-list-toolbar-container {
-      display: flex;
-      justify-content: space-between;
-      height: 64px;
-      padding: 0 24px;
-      line-height: 64px;
-
-      .table-list-toolbar-left {
-        display: flex;
-        justify-content: flex-start;
-
-        .table-list-toolbar-title {
-          color: rgba(0, 0, 0, .85);
-          font-size: 16px;
-          font-weight: 500;
-        }
-      }
-
-      .table-list-toolbar-right {
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-
-        .toolbar-item {
-          border: 0;
-          box-shadow: none;
-        }
-      }
-    }
-  }
-
-  .table-alert {
-    margin-bottom: 16px;
-    padding: 0 24px;
-  }
-}
-
 .input-btn-group {
   text-align: center;
 
@@ -157,4 +111,10 @@ ol {
       }
     }
   }
+}
+
+
+.tree-wrapper {
+  overflow: auto;
+  max-height: 500px;
 }
