--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -1,5 +1,9 @@
 @import "~ant-design-vue/es/style/themes/default.less";
 
+.ant-pro-basicLayout-content {
+  margin: 59px 20px 20px 20px;
+}
+
 .ant-pro-global-header-index-right {
   margin-right: 8px;
 
@@ -15,7 +19,7 @@
 
   .ant-pro-account-avatar {
     .antd-pro-global-header-index-avatar {
-      margin: ~'calc((@{layout-header-height} - 24px) / 2)' 0;
+      margin: ~'calc((@{layout-header-height} - 20px) / 2)' 0;
       margin-right: 8px;
       color: @primary-color;
       vertical-align: top;
