--- a/src/global.less
+++ b/src/global.less
@@ -113,8 +113,37 @@ ol {
   }
 }
 
-
 .tree-wrapper {
   overflow: auto;
   max-height: 500px;
+}
+
+.ant-table td {
+  white-space: nowrap;
+}
+
+// 滚动条样式
+.ant-table-body {
+  overflow-x: auto;
+  &::-webkit-scrollbar {
+    height: 5px;
+  }
+}
+
+.ant-menu {
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: none;
+  border-radius: 0;
+  background: rgba(0, 4, 40, 0.06);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.05);
+  background: rgba(129, 129, 128, 0.85);
 }
