--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -1,5 +1,9 @@
 @import "~ant-design-vue/es/style/themes/default.less";
 
+.ant-pro-top-nav-header-logo h1 {
+  font-size: 15px;
+}
+
 .ant-pro-basicLayout-content {
   margin: 59px 20px 20px 20px;
 }
