--- a/src/global.less
+++ b/src/global.less
@@ -1,149 +1,3 @@
-@import '~ant-design-vue/es/style/themes/default.less';
-
-html,
-body,
-#app, #root {
-  height: 100%;
-}
-
-.colorWeak {
-  filter: invert(80%);
-}
-
-.ant-layout.layout-basic {
-  height: 100vh;
-  min-height: 100vh;
-}
-
-canvas {
-  display: block;
-}
-
-body {
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-ul,
-ol {
-  list-style: none;
-}
-
-// 数据列表 样式
-.table-alert {
-  margin-bottom: 16px;
-}
-
-// 数据列表 操作
-.table-operator {
-  margin-bottom: 18px;
-
-  button {
-    margin-right: 8px;
-  }
-}
-
-// 数据列表 搜索条件
-.table-page-search-wrapper {
-  margin-bottom: 20px;
-
-  .ant-card {
-    .ant-card-body {
-      padding-bottom: 0;
-    }
-  }
-
-  .ant-form-inline {
-    .ant-form-item {
-      display: flex;
-      margin-bottom: 24px;
-      margin-right: 0;
-
-      .ant-form-item-control-wrapper {
-        flex: 1 1;
-        display: inline-block;
-        vertical-align: middle;
-      }
-
-      > .ant-form-item-label {
-        line-height: 32px;
-        padding-right: 8px;
-        width: auto;
-      }
-
-      .ant-form-item-control {
-        height: 32px;
-        line-height: 32px;
-      }
-    }
-  }
-
-  .table-page-search-submitButtons {
-    display: block;
-    margin-bottom: 24px;
-    white-space: nowrap;
-  }
-}
-
-.input-btn-group {
-  text-align: center;
-
-  .ant-btn {
-    margin-right: 5px;
-  }
-}
-
-@media (max-width: @screen-xs) {
-  .ant-table {
-    width: 100%;
-    overflow-x: auto;
-
-    &-thead > tr,
-    &-tbody > tr {
-      > th,
-      > td {
-        white-space: pre;
-
-        > span {
-          display: block;
-        }
-      }
-    }
-  }
-}
-
-.tree-wrapper {
-  overflow: auto;
-  max-height: 500px;
-}
-
-.ant-table td {
-  white-space: nowrap;
-}
-
-// 滚动条样式
-.ant-table-body {
-  overflow-x: auto;
-  &::-webkit-scrollbar {
-    height: 5px;
-  }
-}
-
-.ant-menu {
-  &::-webkit-scrollbar {
-    width: 5px;
-  }
-}
-
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: none;
-  border-radius: 0;
-  background: rgba(0, 4, 40, 0.06);
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.05);
-  background: rgba(129, 129, 128, 0.85);
-}
+@import "./assets/less/ant-design/include";
+@import "./assets/less/base/include";
+@import "./assets/less/plugins/include";
