--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -23,7 +23,7 @@
 
   .ant-pro-account-avatar {
     .antd-pro-global-header-index-avatar {
-      margin: ~'calc((@{layout-header-height} - 20px) / 2)' 0;
+      margin: ~'calc((@{layout-header-height} - 24px) / 2)' 0;
       margin-right: 8px;
       color: @primary-color;
       vertical-align: top;
@@ -42,3 +42,10 @@
   }
 }
 
+.ant-pro-sider-menu-logo {
+  height: @layout-header-height;
+}
+
+.ant-pro-setting-drawer-handle {
+  display: none;
+}
