--- a/src/less/base/base.less
+++ b/src/less/base/base.less
@@ -36,3 +36,15 @@ ol {
   font-weight: bold;
   color: rgba(0, 0, 0, 0.8);
 }
+
+.text-left {
+  text-align: left;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
