--- a/src/less/ant-design/include.less
+++ b/src/less/ant-design/include.less
@@ -1,7 +1,9 @@
 // Data Entry
+@import "data-entry/form";
 @import "data-entry/input";
 
 // Data Display
 @import "data-display/card";
 @import "data-display/table";
+@import "data-display/timeline";
 @import "data-display/tree";
