添加自动分割菜单选项

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -1,5 +1,36 @@
 @import "~ant-design-vue/es/style/themes/default.less";
 
+@media (min-width: @screen-md) {
+  .ant-layout {
+    &.ant-layout-has-sider {
+      .ant-pro-global-header {
+        display: flex;
+
+        .ant-pro-global-header-trigger {
+          width: 64px;
+          min-width: 64px;
+          max-width: 64px;
+          flex-grow: 0;
+        }
+
+        .ant-pro-global-header-index-right {
+          width: auto;
+          flex-grow: 1;
+
+          .ant-pro-global-header-top-menu {
+            float: left;
+            width: calc(100% - 250px);
+          }
+
+          .ant-pro-global-header-top-bar {
+            float: right;
+          }
+        }
+      }
+    }
+  }
+}
+
 .ant-pro-top-nav-header-logo h1 {
   font-size: 15px;
 }
@@ -7,6 +38,7 @@
 .ant-pro-basicLayout-content {
   margin: 55px 16px 16px 16px;
 }
+
 
 .ant-pro-global-header-index-right {
   margin-right: 8px;
