--- a/src/less/base/scrollbar.less
+++ b/src/less/base/scrollbar.less
@@ -3,10 +3,9 @@
   max-height: 460px;
 }
 
-.ant-menu {
-  &::-webkit-scrollbar {
-    width: 5px;
-  }
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-track {
