修复任务签收问题

--- a/src/views/sys/personal/center/View.less
+++ b/src/views/sys/personal/center/View.less
@@ -158,8 +158,9 @@
   .card-description a {
     display: block;
     color: rgba(0, 0, 0, 0.45);
+    height: 22px;
     line-height: 22px;
-    overflow: hidden;
+    .text-overflow()
   }
 
   .project-item {
