--- a/src/components/MultiTab/index.less
+++ b/src/components/MultiTab/index.less
@@ -31,7 +31,6 @@
       }
 
       .ant-tabs-tab {
-        max-width: 180px;
         height: 39px;
         padding: 0 22px;
         margin: 0 -10px 0 0;
@@ -72,25 +71,22 @@
         }
 
         .ant-dropdown-trigger {
+          max-width: 180px;
           user-select: none;
           display: inline-block;
           text-overflow: ellipsis;
           white-space: nowrap;
           overflow: hidden;
-          width: 100%;
         }
 
         .anticon {
-          position: relative;
-          top: -14px;
-          right: 0;
+          margin-right: 8px;
+          margin-top: -30px;
+          vertical-align: middle;
         }
 
         .ant-tabs-close-x {
           display: inline-block;
-          position: relative;
-          top: -14px;
-          right: 34px;
           width: 0;
           height: 14px;
           font-size: 8px;
